--- a/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
+++ b/PokemonMastersGuildSite/Views/GuildRoster/Index.cshtml
@@ -43,7 +43,7 @@
                             <img class="playerImg" data-bind="attr: {src: getClassIcon(Class), alt: getClass(Class)}" />
                         </div>
                         <div class="col-xs-4">
-                            <div data-bind="text: Name + ' - Level ' + Level"></div>
+                            <div data-bind="text: Name + ' - ' + Level"></div>
                             <div data-bind="text: getRace(Race) + ' ' + getClass(Class)"></div>
                             <div data-bind="text: Professions"></div>
                         </div>
@@ -71,7 +71,7 @@
 
                     <div class="row">
                         <div class="col-xs-4"></div>
-                        <div class=" col-xs-4 clickable mainspec" data-bind="text: Spec[0].spec.name, event: {click: $parent.setSpec(0)}"></div>
+                        <div class=" col-xs-4 clickable mainSpec" data-bind="text: Spec[0].spec.name, event: {click: $parent.setSpec(0)}"></div>
                         <div class="col-xs-4 clickable offSpec" data-bind="text: Spec[1].spec ? Spec[1].spec.name : '', event: {click: $parent.setSpec(1)}"></div>
                     </div>
 
@@ -79,7 +79,7 @@
                     <div class="talents row">
                         <div class="col-xs-6">Tier</div>
                         <div class="col-xs-6">Name</div>
-                        <div data-bind="foreach: HoverSpec().talents.sort(function(a,b) {return a.tier - b.tier})">
+                        <div data-bind="foreach: ActiveSpec().talents.sort(function(a,b) {return a.tier - b.tier})">
                             <div class="col-xs-6" data-bind="text: $data.tier + 1"></div>
                             <div class="col-xs-6" data-bind="text: $data.spell.name"></div>
                         </div>
@@ -88,8 +88,8 @@
                         <div class="col-xs-6">Major</div>
                         <div class="col-xs-6">Minor</div>
                         <div data-bind="foreach: [0, 1, 2]">
-                            <div class="col-xs-6" data-bind="text: $parent.HoverSpec().glyphs.major[$data] ? $parent.HoverSpec().glyphs.major[$data].name : ''"></div>
-                            <div class="col-xs-6" data-bind="text: $parent.HoverSpec().glyphs.minor[$data] ? $parent.HoverSpec().glyphs.minor[$data].name : ''"></div>
+                            <div class="col-xs-6" data-bind="text: $parent.ActiveSpec().glyphs.major[$data] ? $parent.ActiveSpec().glyphs.major[$data].name : ''"></div>
+                            <div class="col-xs-6" data-bind="text: $parent.ActiveSpec().glyphs.minor[$data] ? $parent.ActiveSpec().glyphs.minor[$data].name : ''"></div>
                         </div>
                     </div>
                     <!-- End Talents & Glyphs -->
